src/styles.css
    /* You can add global styles to this file, and also import other style files */
    /* @font-face {
        font-family: 'Material Icons';
        font-style: normal;
        font-weight: 400;
        src: local('Material Icons'), url(material-icons.woff2) format('woff2');
    }
    
    .material-icons {
        font-family: 'Material Icons';
        font-weight: normal;
        font-style: normal;
        font-size: 20px;
        line-height: 1;
        letter-spacing: normal;
        text-transform: none;
        display: inline-block;
        white-space: nowrap;
        word-wrap: normal;
        direction: ltr;
        -webkit-font-feature-settings: 'liga';
        -webkit-font-smoothing: antialiased;
    } */
    
    @tailwind base;
    @tailwind components;
    @tailwind utilities;
    html,
    body {
        height: 100%;
    }
    
    body {
        margin: 0;
        font-family: 'Cormorant Garamond', sans-serif;
        font-size: large;
    }
    
    .tgug-bg-main {
        background-color: rgb(1, 1, 37);
    }
    
    .tgug-bg-darker {
        background-color: rgb(1, 1, 26);
    }
    
    header {
        filter: drop-shadow(0px 1px 10px rgb(1, 3, 80));
    }
    
    .tgug-page-heading {
        @apply py-2 px-4 text-xl text-blue-400 border-b-4 border-blue-300 rounded-b-2xl
    }
    
    .tgug-timeline-card {
        filter: drop-shadow(0px 2px 2px rgb(64, 64, 245));
    }
    
    .tgug-timeline-card-hf {
        filter: drop-shadow(0px 7px 3px rgb(64, 64, 245));
    }
    
    .tgug-drop-shadow {
        filter: drop-shadow(2px 2px 2px rgb(2, 2, 172));
    }
    
    .tgug-drop-shadow-even {
        filter: drop-shadow(0px 0px 3px rgb(2, 2, 172));
    }
    
    .tgug-drop-shadow-even-hover {
        filter: drop-shadow(0px 0px 3px rgb(94, 94, 247));
    }
    
    .tgug-drop-contact-image-shadow {
        filter: drop-shadow(0px 0px 300px rgb(94, 94, 247));
    }

